# real-estate-stat

./: .gitignore  README.md  decorator.py  main.py  pyproject.toml
real_estate_stat/: async_socrata.py  client_factory.py  decorator.py  re_stat.py  real_estate_stat.py  rs_stat.py  sodapy_wrapper.py
tests/: test_exceptions.py
