[tool.poetry]
name = "real-estate-stat"
version = "0.1.0"
description = ""
authors = ["Andrei Basenko <andrey.basenko@gmail.com>"]
readme = "README.md"
packages = [{include = "real_estate_stat"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
