[tool.poetry]
name = "real-estate-stat"
version = "0.1.0"
description = ""
authors = ["Andrei Basenko <andrey.basenko@gmail.com>"]
readme = "README.md"
packages = [{include = "real_estate_stat"}]

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.8.3"
asgiref = "^3.6.0"
sodapy = "^2.2.0"
tabulate = "^0.9.0"

[tool.poetry.scripts]
re-stat = "real_estate_stat.re_stat:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
